# xxHash

./: CMakeLists.txt  Makefile  xxh_x86dispatch.c  xxhash.h
.github/workflows/: ci.yml
cmake_unofficial/: CMakeLists.txt
examples/: .clang-format  .gitignore  Makefile  xxh3-128bits-one-shot.c  xxh3-128bits-stream.c  xxh3-64bits-one-shot.c  xxh3-64bits-stream.c  xxh32-one-shot.c  xxh32-stream.c  xxh64-one-shot.c  xxh64-stream.c  xxhash-hello.c
tests/: generate_unicode_test.c
tests/bench/: benchHash.c
tests/collisions/: threading.h
